--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiofiles==0.8.0
+anyio==3.6.1
 api-display-purposes==0.0.3
 APScheduler==3.6.3
 asgiref==3.5.0
@@ -17,17 +19,19 @@ cryptography==37.0.2
 distlib==0.3.4
 dj-database-url==0.5.0
 Django==4.0.5
-django-admin-volt==0.0.5
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
+django-jazzmin==2.5.0
 django-on-heroku==1.1.2
 django-storages==1.12.3
 django-widget-tweaks==1.4.12
 EasyProcess==1.1
 emoji==1.7.0
+fastapi==0.78.0
 filelock==3.6.0
 future==0.18.2
 googleapis-common-protos==1.56.1
+greenlet==1.1.2
 grpcio==1.46.1
 gunicorn==20.1.0
 h11==0.13.0
@@ -53,6 +57,7 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.20.0
+python-multipart==0.0.5
 python-telegram-bot==13.11
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
@@ -69,7 +74,11 @@ six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.35
+sqlalchemy2-stubs==0.0.2a23
+sqlmodel==0.0.6
 sqlparse==0.4.2
+starlette==0.19.1
 tornado==6.1
 tqdm==4.64.0
 trio==0.20.0
@@ -77,6 +86,7 @@ trio-websocket==0.9.2
 typing_extensions==4.2.0
 tzdata==2022.1
 tzlocal==4.2
+ujson==5.3.0
 Unidecode==1.3.4
 urllib3==1.26.9
 virtualenv==20.14.1
