--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ charset-normalizer==2.0.12
 clarifai==2.6.2
 configparser==3.8.1
 cryptography==37.0.2
+defusedxml==0.7.1
+diff-match-patch==20200713
 distlib==0.3.4
 dj-database-url==0.5.0
 Django==4.0.5
@@ -27,6 +29,7 @@ django-storages==1.12.3
 django-widget-tweaks==1.4.12
 EasyProcess==1.1
 emoji==1.7.0
+et-xmlfile==1.1.0
 fastapi==0.78.0
 filelock==3.6.0
 future==0.18.2
@@ -41,7 +44,10 @@ instapy==0.6.16
 jmespath==1.0.0
 jsonschema==2.6.0
 livereload==2.6.3
+MarkupPy==1.14
 MeaningCloud-python==2.0.0
+odfpy==1.4.1
+openpyxl==3.0.10
 outcome==1.1.0
 Pillow==9.1.1
 pipenv==2022.4.8
@@ -53,6 +59,7 @@ pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
 pyOpenSSL==22.0.0
+PyPDF2==2.1.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-decouple==3.6
@@ -79,6 +86,7 @@ sqlalchemy2-stubs==0.0.2a23
 sqlmodel==0.0.6
 sqlparse==0.4.2
 starlette==0.19.1
+tablib==3.2.1
 tornado==6.1
 tqdm==4.64.0
 trio==0.20.0
@@ -94,3 +102,5 @@ virtualenv-clone==0.5.7
 webdriverdownloader==1.1.0.3
 whitenoise==6.1.0
 wsproto==1.1.0
+xlrd==2.0.1
+xlwt==1.3.0
