--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ api-display-purposes==0.0.3
 APScheduler==3.6.3
 asgiref==3.5.0
 async-generator==1.10
+async-timeout==4.0.2
 attrs==21.4.0
 beautifulsoup4==4.11.1
 boto3==1.24.0
@@ -17,14 +18,17 @@ clarifai==2.6.2
 configparser==3.8.1
 cryptography==37.0.2
 defusedxml==0.7.1
+Deprecated==1.2.13
 diff-match-patch==20200713
 distlib==0.3.4
 dj-database-url==0.5.0
-Django==4.0.5
+Django==3.2.13
+django-appconf==1.0.5
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-jazzmin==2.5.0
 django-on-heroku==1.1.2
+django-simple-history==3.1.1
 django-storages==1.12.3
 django-widget-tweaks==1.4.12
 EasyProcess==1.1
@@ -49,6 +53,7 @@ MeaningCloud-python==2.0.0
 odfpy==1.4.1
 openpyxl==3.0.10
 outcome==1.1.0
+packaging==21.3
 Pillow==9.1.1
 pipenv==2022.4.8
 platformdirs==2.5.1
@@ -59,6 +64,7 @@ pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
 PyPDF2==2.1.0
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -70,6 +76,7 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 PyVirtualDisplay==3.0
 PyYAML==6.0
+redis==4.3.3
 regex==2022.4.24
 requests==2.27.1
 s3transfer==0.6.0
@@ -101,6 +108,7 @@ virtualenv==20.14.1
 virtualenv-clone==0.5.7
 webdriverdownloader==1.1.0.3
 whitenoise==6.1.0
+wrapt==1.14.1
 wsproto==1.1.0
 xlrd==2.0.1
 xlwt==1.3.0
