--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ aiofiles==0.8.0
 anyio==3.6.1
 api-display-purposes==0.0.3
 APScheduler==3.6.3
+arabic-reshaper==2.1.3
 asgiref==3.5.0
+asn1crypto==1.5.1
 async-generator==1.10
 async-timeout==4.0.2
 attrs==21.4.0
@@ -15,8 +17,10 @@ cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.12
 clarifai==2.6.2
+click==8.1.3
 configparser==3.8.1
 cryptography==37.0.2
+cssselect2==0.6.0
 defusedxml==0.7.1
 Deprecated==1.2.13
 diff-match-patch==20200713
@@ -42,16 +46,19 @@ greenlet==1.1.2
 grpcio==1.46.1
 gunicorn==20.1.0
 h11==0.13.0
+html5lib==1.1
 idna==2.10
 instagrapi==1.16.17
 instapy==0.6.16
 jmespath==1.0.0
 jsonschema==2.6.0
 livereload==2.6.3
+lxml==4.9.0
 MarkupPy==1.14
 MeaningCloud-python==2.0.0
 odfpy==1.4.1
 openpyxl==3.0.10
+oscrypto==1.3.0
 outcome==1.1.0
 packaging==21.3
 Pillow==9.1.1
@@ -63,10 +70,14 @@ psycopg2-binary==2.9.3
 pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
+pyHanko==0.13.1
+pyhanko-certvalidator==0.19.5
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PyPDF2==2.1.0
+PyPDF3==1.0.6
 PySocks==1.7.1
+python-bidi==0.4.2
 python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.20.0
@@ -76,8 +87,10 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 PyVirtualDisplay==3.0
 PyYAML==6.0
+qrcode==7.3.1
 redis==4.3.3
 regex==2022.4.24
+reportlab==3.6.10
 requests==2.27.1
 s3transfer==0.6.0
 selenium==4.1.5
@@ -93,7 +106,9 @@ sqlalchemy2-stubs==0.0.2a23
 sqlmodel==0.0.6
 sqlparse==0.4.2
 starlette==0.19.1
+svglib==1.3.0
 tablib==3.2.1
+tinycss2==1.1.1
 tornado==6.1
 tqdm==4.64.0
 trio==0.20.0
@@ -103,12 +118,15 @@ tzdata==2022.1
 tzlocal==4.2
 ujson==5.3.0
 Unidecode==1.3.4
+uritools==4.0.0
 urllib3==1.26.9
 virtualenv==20.14.1
 virtualenv-clone==0.5.7
 webdriverdownloader==1.1.0.3
+webencodings==0.5.1
 whitenoise==6.1.0
 wrapt==1.14.1
 wsproto==1.1.0
+xhtml2pdf==0.2.8
 xlrd==2.0.1
 xlwt==1.3.0
