--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Deprecated==1.2.13
 diff-match-patch==20200713
 distlib==0.3.4
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.2.13
 django-appconf==1.0.5
 django-debug-toolbar==3.2.4
@@ -106,6 +107,7 @@ sqlalchemy2-stubs==0.0.2a23
 sqlmodel==0.0.6
 sqlparse==0.4.2
 starlette==0.19.1
+static3==0.7.0
 svglib==1.3.0
 tablib==3.2.1
 tinycss2==1.1.1
