--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ diff-match-patch==20200713
 distlib==0.3.4
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==3.2.13
+Django>=3.0,<4.0
 django-appconf==1.0.5
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
@@ -68,6 +68,7 @@ platformdirs==2.5.1
 plyer==2.0.0
 protobuf==3.20.1
 psycopg2-binary==2.9.3
+psycopg2>=2.8
 pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
