--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ emoji==1.7.0
 et-xmlfile==1.1.0
 fastapi==0.78.0
 filelock==3.6.0
+flake8==4.0.1
 future==0.18.2
 googleapis-common-protos==1.56.1
 greenlet==1.1.2
@@ -56,6 +57,7 @@ jsonschema==2.6.0
 livereload==2.6.3
 lxml==4.9.0
 MarkupPy==1.14
+mccabe==0.6.1
 MeaningCloud-python==2.0.0
 odfpy==1.4.1
 openpyxl==3.0.10
@@ -68,9 +70,11 @@ platformdirs==2.5.1
 plyer==2.0.0
 protobuf==3.20.1
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
 pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
+pyflakes==2.4.0
 pyHanko==0.13.1
 pyhanko-certvalidator==0.19.5
 pyOpenSSL==22.0.0
