--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: gunicorn sentir.wsgi:application --bind 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
@@ -22,14 +22,3 @@ services:
       - POSTGRES_PASSWORD=postgres
     depends_on:
       - db
-  nginx:
-    container_name: dev_web
-    restart: on-failure
-    image: nginx:1.19.8
-    volumes:
-      - ./nginx/prod/nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/sentir/static
-    ports:
-      - 80:80
-    depends_on:
-      - web
