--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ attrs==21.4.0
 beautifulsoup4==4.11.1
 boto3==1.24.0
 botocore==1.27.1
+Brotli==1.0.9
 cachetools==4.2.2
 certifi==2021.10.8
 cffi==1.15.0
@@ -31,17 +32,22 @@ Django==4.0
 django-appconf==1.0.5
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
+django-import-export==2.8.0
 django-jazzmin==2.5.0
 django-on-heroku==1.1.2
+django-pdfkit==0.3.1
 django-simple-history==3.1.1
 django-storages==1.12.3
+django-weasyprint==2.1.0
 django-widget-tweaks==1.4.12
+django-wkhtmltopdf==3.4.0
 EasyProcess==1.1
 emoji==1.7.0
 et-xmlfile==1.1.0
 fastapi==0.78.0
 filelock==3.6.0
 flake8==4.0.1
+fonttools==4.34.4
 future==0.18.2
 googleapis-common-protos==1.56.1
 greenlet==1.1.2
@@ -64,6 +70,7 @@ openpyxl==3.0.10
 oscrypto==1.3.0
 outcome==1.1.0
 packaging==21.3
+pdfkit==0.6.0
 Pillow==9.1.1
 pipenv==2022.4.8
 platformdirs==2.5.1
@@ -74,6 +81,7 @@ pycodestyle==2.8.0
 pycparser==2.21
 pycryptodomex==3.14.1
 pydantic==1.9.0
+pydyf==0.2.0
 pyflakes==2.4.0
 pyHanko==0.13.1
 pyhanko-certvalidator==0.19.5
@@ -81,6 +89,7 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PyPDF2==2.1.0
 PyPDF3==1.0.6
+pyphen==0.12.0
 PySocks==1.7.1
 python-bidi==0.4.2
 python-dateutil==2.8.2
@@ -136,3 +145,5 @@ wsproto==1.1.0
 xhtml2pdf==0.2.8
 xlrd==2.0.1
 xlwt==1.3.0
+xvfbwrapper==0.2.9
+zopfli==0.2.1
